--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node": "*"
   },
   "dependencies": {
+    "@peculiar/webcrypto": "^1.4.3",
     "browserify-cipher": "^1.0.0",
     "browserify-sign": "^4.0.0",
     "create-ecdh": "^4.0.0",
@@ -38,7 +39,6 @@
     "tape": "~2.3.2",
     "zuul": "^3.6.0"
   },
-  "optionalDependencies": {},
   "browser": {
     "crypto": false
   },
